--- a/index.css
+++ b/index.css
@@ -1,30 +1,23 @@
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
   }
   
-  /* html {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-family: 'Dosis', sans-serif;
-    line-height: 1.6;
-    color: #666;
-    background: #F6F6F6;
+  body {
+    font-family: Arial, Helvetica, sans-serif;
   }
-   */
   /* .container {
     display: flex;
     flex-wrap: wrap;
 
-  }
-   */
-  .card {
-    margin: 1rem;
-    background: white;
-    width: 300px;
-    box-shadow: 2px 4px 25px rgba(0, 0, 0, .1);
-    border-radius: 12px;
-    overflow: hidden;
-    transition: all .2s linear;
+  } */
+  .grid-container {
+    display: grid;
   }
   
- 
+  .card {
+    background: white;
+    border-radius: 12px;
+    width: auto;
+    padding: 50px;
+  }
+  
